Fix MITIGATE phase: Set max_issues to 1 to avoid storePhaseResults error
Issue: MITIGATE fails with 'Issue number is required for mitigate phase'
Root cause: Action's storePhaseResults requires issue_number when processing multiple issues
Workaround: Process one issue at a time (max_issues: 1) to ensure clear issue_number

This allows MITIGATE to complete successfully without ambiguity about which
issue's results to store.

--- a/.github/workflows/rsolv-three-phase-demo.yml
+++ b/.github/workflows/rsolv-three-phase-demo.yml
@@ -37,7 +37,7 @@ jobs:
           rsolvApiKey: ${{ secrets.RSOLV_API_KEY }}
           api_url: https://rsolv-staging.com
           mode: 'scan'
-          max_issues: ${{ inputs.max_issues }}
+          max_issues: 1 # Process one issue at a time to avoid storePhaseResults error
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEBUG: ${{ inputs.debug && 'rsolv:*' || '' }}
@@ -76,7 +76,7 @@ jobs:
           api_url: https://rsolv-staging.com
           mode: 'validate'
           issue_label: 'rsolv:detected'
-          max_issues: ${{ inputs.max_issues }}
+          max_issues: 1 # Process one issue at a time to avoid storePhaseResults error
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEBUG: ${{ inputs.debug && 'rsolv:*' || '' }}
@@ -122,7 +122,7 @@ jobs:
           api_url: https://rsolv-staging.com
           mode: 'mitigate'
           issue_label: 'rsolv:validated'
-          max_issues: ${{ inputs.max_issues }}
+          max_issues: 1 # Process one issue at a time to avoid storePhaseResults error
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEBUG: ${{ inputs.debug && 'rsolv:*' || '' }}
